--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=0"><title>小矮人汽车</title><script>(function (doc, win) {
       var docEl = doc.documentElement,
         resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+		console.log(6666666666);
         recalc = function () {
           var clientWidth = docEl.clientWidth;
           if (!clientWidth) return;
@@ -10,7 +11,7 @@
       if (!doc.addEventListener) return;
       win.addEventListener(resizeEvt, recalc, false);
       doc.addEventListener('DOMContentLoaded', recalc, false);
-    })(document, window);</script><script>// init vConsole
+    })(document, window);</script><script>// init vConsole去问我去额前c
     // var vConsole = new VConsole();
     // console.log('Hello world');</script><style>#app-box {
       font-size: 14px;
