--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=0"><title>小矮人汽车</title><script>(function (doc, win) {
       var docEl = doc.documentElement,
         resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
-		console.log(6666666666);
         recalc = function () {
           var clientWidth = docEl.clientWidth;
           if (!clientWidth) return;
@@ -11,7 +10,7 @@
       if (!doc.addEventListener) return;
       win.addEventListener(resizeEvt, recalc, false);
       doc.addEventListener('DOMContentLoaded', recalc, false);
-    })(document, window);</script><script>// init vConsole去问我去额前c
+    })(document, window);</script><script>// init vConsole
     // var vConsole = new VConsole();
     // console.log('Hello world');</script><style>#app-box {
       font-size: 14px;
@@ -23,4 +22,4 @@
       mta.setAttribute("sid", "500576118");
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(mta, s);
-    })();</script><script type=text/javascript src=./static/js/manifest.da33bc7d6903fc05afd0.js></script><script type=text/javascript src=./static/js/vendor.daa4eeee46aa276bf739.js></script><script type=text/javascript src=./static/js/app.48bf7ff48b32f8cab356.js></script></body></html>
+    })();</script><script type=text/javascript src=./static/js/manifest.8dd20fe5c33f1c69aef6.js></script><script type=text/javascript src=./static/js/vendor.daa4eeee46aa276bf739.js></script><script type=text/javascript src=./static/js/app.4b4f231eaf3390142398.js></script></body></html>
